# src/routes/appointmentRoutes.js
@@ -7,6 +7,7 @@ const numberRegex = new RegExp("^\\d+$");
 const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  // #swagger.tags = ['appointments']
   /* #swagger.parameters['filtro'] = {
           in: "query",
           name: "Filtro de busca",
@@ -62,6 +63,7 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  // #swagger.tags = ['appointments']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -153,6 +155,7 @@ router.post("/", (req, res) => {
 });
 
 router.put("/:id", (req, res) => {
+  // #swagger.tags = ['appointments']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -225,6 +228,7 @@ router.put("/:id", (req, res) => {
 });
 
 router.delete("/:id", (req, res) => {
+  // #swagger.tags = ['appointments']
   let appointment = db
     .getDB("appointment")
     .find((el) => el.id === parseInt(req.params.id));
