# src/routes/eventRoutes.js
@@ -7,6 +7,7 @@ const numberRegex = new RegExp("^\\d+$");
 const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  // #swagger.tags = ['events']
   /* #swagger.parameters['filtro'] = {
           in: "query",
           name: "Filtro de busca",
@@ -62,6 +63,7 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  // #swagger.tags = ['events']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -114,6 +116,7 @@ router.post("/", (req, res) => {
 });
 
 router.put("/:id", (req, res) => {
+  // #swagger.tags = ['events']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -168,6 +171,7 @@ router.put("/:id", (req, res) => {
 });
 
 router.delete("/:id", (req, res) => {
+  // #swagger.tags = ['events']
   let event = db.getDB("event").find((el) => el.id === parseInt(req.params.id));
   if (event) {
     db.removeDB("event", event);
