# src/routes/professionalRoutes.js
@@ -8,6 +8,7 @@ const numberRegex = new RegExp("^\\d+$");
 const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  // #swagger.tags = ['professionals']
   /* #swagger.parameters['filtro'] = {
           in: "query",
           name: "Filtro de busca",
@@ -63,6 +64,7 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  // #swagger.tags = ['professionals']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -147,6 +149,7 @@ router.post("/", (req, res) => {
 });
 
 router.put("/:id", (req, res) => {
+  // #swagger.tags = ['professionals']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -238,6 +241,7 @@ router.put("/:id", (req, res) => {
 });
 
 router.delete("/:id", (req, res) => {
+  // #swagger.tags = ['professionals']
   let prof = db
     .getDB("professional")
     .find((el) => el.id == parseInt(req.params.id));
