# src/routes/studentRoutes.js
@@ -8,6 +8,7 @@ const numberRegex = new RegExp("^\\d+$");
 const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  // #swagger.tags = ['students']
   /* #swagger.parameters['filtro'] = {
           in: "query",
           name: "Filtro de busca",
@@ -63,6 +64,7 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  // #swagger.tags = ['students']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -148,6 +150,7 @@ router.post("/", (req, res) => {
 });
 
 router.put("/:id", (req, res) => {
+  // #swagger.tags = ['students']
   /*  #swagger.requestBody = {
         required: true,
         content: {
@@ -247,6 +250,7 @@ router.put("/:id", (req, res) => {
 });
 
 router.delete("/:id", (req, res) => {
+  // #swagger.tags = ['students']
   let student = db
     .getDB("student")
     .find((el) => el.id === parseInt(req.params.id));
